# Research-Paper-Curator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  compose.yml  pyproject.toml
airflow/dags/: arxiv_ingestion_dag.py
devlog/: week0.md  week1.md
src/: config.py  main.py
src/models/: paper.py
src/routers/: health.py  papers.py
src/services/: arxiv_client.py  database.py  metadata_fetcher.py  pdf_downloader.py  pdf_parser.py
tests/: test_ingestion.py
